# marketplace

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 45e0933ad9e6_.py  705b297bb31c_init.py
app/: __init__.py2  db.py  exceptions.py  handlers.py  kk.py  main.py
app/marketplace/crud/: marketplace_crud.py  marketplace_cte.sql
app/marketplace/models/: models.py
app/marketplace/routes/: marketplace_route.py
app/marketplace/schemas/: schemas.py
common/: settings.py
